# task_tracker

./: README.md  pyproject.toml
config/: settings.py  urls.py
mainapp/: forms.py  models.py  urls.py  views.py
mainapp/migrations/: 0001_initial.py
mainapp/templates/mainapp/: index.html  login.html  new_task.html  register.html  task_detail.html
static/css/: style.css
templates/: base.html
templates/inc/: menu.html
